objects/Workplan_Type_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Assignments_Must_Be_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Assignments Must Be Completed before another stage can be started (set to in progress)</inlineHelpText>
        <label>All Assignments Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <formula>IF ( RecordType.DeveloperName = 'Process', Sequence_Number__c, Parent_Workplan_Type_Stage__r.Sequence_Number__c + (Sequence_Number__c / 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Assignments__c</fullName>
        <label>Number of Assignments</label>
        <summaryFilterItems>
            <field>AIA_Workplan_Type_Task__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AIA_Workplan_Type_Task__c.Workplan_Type_Stage__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Sub_processes__c</fullName>
        <description>Counts the no of sub - process records</description>
        <label>Number of Sub-Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Workplan_Stage_Name__c</fullName>
        <formula>Parent_Workplan_Type_Stage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Workplan Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Workplan_Type_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Workplan Type Stage</label>
        <referenceTo>Workplan_Type_Stage__c</referenceTo>
        <relationshipLabel>Workplan Type Stage</relationshipLabel>
        <relationshipName>Workplan_Type_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <inlineHelpText>The sequence number should be incremented in multiples of 10.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Category__c</fullName>
        <label>Stage Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Group Structure &amp; Admin Setup</fullName>
                </value>
                <value>
                    <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment, Materials &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding, Loading &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Enrollment &amp; ID Card Generation</fullName>
                </value>
                <value>
                    <fullName>Post Sales Document Generation</fullName>
                </value>
                <value>
                    <fullName>Billing (Monthly) Invoices</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Member Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>When a new stage is added, it should match one of the picklist values for the opportunity</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Quote Delivered</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Confirmation of Sales/Group Paperwork</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off Meeting</fullName>
                </value>
                <value>
                    <fullName>Group Structure</fullName>
                </value>
                <value>
                    <fullName>Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Doc</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>Create MM</fullName>
                </value>
                <value>
                    <fullName>Benefit Setup</fullName>
                </value>
                <value>
                    <fullName>CYC</fullName>
                </value>
                <value>
                    <fullName>CYC BF App</fullName>
                </value>
                <value>
                    <fullName>Process Enrollment</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>BR Wellness</fullName>
                </value>
                <value>
                    <fullName>Setup CVS</fullName>
                </value>
                <value>
                    <fullName>Setup Davis</fullName>
                </value>
                <value>
                    <fullName>Setup Magellan</fullName>
                </value>
                <value>
                    <fullName>Setup Facets Dental</fullName>
                </value>
                <value>
                    <fullName>Carve-out RX</fullName>
                </value>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Perf Guarantee</fullName>
                </value>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>PP CFL</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workplan_Type_Name__c</fullName>
        <formula>Workplan_Type__r.Workplan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplan Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <label>Workplan Type</label>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipLabel>Workplan Type Stage</relationshipLabel>
        <relationshipName>AIA_Workplan_Type_Stage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workplan Type Stage</label>
    <nameField>
        <displayFormat>WTS-{00000}</displayFormat>
        <label>Workplan Type Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Type Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Process</fullName>
        <active>true</active>
        <label>Sub-Process</label>
    </recordTypes>
    <validationRules>
        <fullName>EWTS001</fullName>
        <active>true</active>
        <description>Validates the Stage Category on a SubProcess matches the Stage Category on the parent Process</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (RecordType.DeveloperName = "Sub_Process" &amp;&amp; TEXT(Stage_Category__c) &lt;&gt; TEXT(Parent_Workplan_Type_Stage__r.Stage_Category__c))</errorConditionFormula>
        <errorDisplayField>Stage_Category__c</errorDisplayField>
        <errorMessage>ETWS001: Stage Category must be the same as the parent Workplan Type Stage Category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTS002</fullName>
        <active>true</active>
        <description>When adding a workplan stage (subprocess) - you should only be able to select from the parent workplan type stages = process for that workplan type</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF( TEXT(Stage_Category__c)&lt;&gt; TEXT(Parent_Workplan_Type_Stage__r.Stage_Category__c), TRUE, FALSE) &amp;&amp; IF(RecordType.Name='Sub-Process',TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Stage_Category__c</errorDisplayField>
        <errorMessage>Stage category for the sub-process must be the same as the stage category for the parent workplan type stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTS003</fullName>
        <active>false</active>
        <description>If the workplan type.Active Flag = True, don't allow insert of new workplan type stages .</description>
        <errorConditionFormula>(Not($Permission.Ignore_Validation_Rules)) &amp;&amp; ISNEW() &amp;&amp; Workplan_Type__r.Active__c</errorConditionFormula>
        <errorMessage>You can not add new workplan type stages  for an active workplan type.</errorMessage>
    </validationRules>
</CustomObject>